--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Swiggy</string>
 
     <!-- Navigation Menu-->
-    <string name="home">Home</string>
+    <string name="swiggy">Swiggy</string>
     <string name="food">Food</string>
     <string name="instamart">Instamart</string>
     <string name="dineout">Dineout</string>
