--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,25 @@
 <resources>
     <string name="app_name">Swiggy</string>
 
-    <!-- Navigation Menu-->
+    <!-- Start Auth -->
+    <string name="sign_in">Sign in</string>
+    <string name="sign_up">Sign up</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="remember_me">Remember me</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="dont_have_account">Don\'t have an account?</string>
+    <string name="i_have_account">I have an account.</string>
+    <!-- End Auth -->
+
+
+    <!-- Start Navigation Menu -->
     <string name="swiggy">Swiggy</string>
     <string name="food">Food</string>
     <string name="instamart">Instamart</string>
     <string name="dineout">Dineout</string>
     <string name="genie">Genie</string>
+    <!-- End Navigation Menu -->
+
+
 </resources>
