--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="sign_up">Sign up</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
     <string name="remember_me">Remember me</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="dont_have_account">Don\'t have an account?</string>
@@ -21,5 +22,20 @@
     <string name="genie">Genie</string>
     <!-- End Navigation Menu -->
 
+    <string name="email_not_empty">Email cannot be empty</string>
+    <string name="email_not_valid">Invalid email</string>
+    <string name="password_not_empty">Password cannot be empty</string>
+    <string name="password_not_valid">Invalid password</string>
+    <string name="error_invalid_credentials">Invalid credentials</string>
+    <string name="error_user_not_found">Account not found</string>
+    <string name="error_unknown">Unknown error</string>
+
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="success">Success</string>
+    <string name="warning">Warning</string>
+    <string name="error">Error</string>
+    <string name="infomation">Infomation</string>
+    <string name="loading">Loading</string>
 
 </resources>
