--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -51,6 +51,13 @@
     <string name="english">Tiếng Anh</string>
     <string name="vietnamese">Tiếng Việt</string>
     <string name="save">Lưu</string>
-    <string name="en_vi">EN/VI</string>
-
+    <string name="avatar">Ảnh đại diện</string>
+    <string name="location">Địa điểm</string>
+    <string name="home">Nhà</string>
+    <string name="search_for">Tìm kiếm với</string>
+    <string name="search">Tìm kiếm</string>
+    <string name="mic">Micrô</string>
+    <string name="discover_swiggy">KHÁM PHÁ SWIGGY</string>
+    <string name="crafted_with_by_hoang_pham">Được tạo ra với ❤️ bởi Hoàng Phạm</string>
+    <string name="live_nit_up">Tận hưởng \ncuộc sống!</string>
 </resources>
