--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="discover_swiggy">DISCOVER SWIGGY</string>
     <string name="crafted_with_by_hoang_pham">Crafted with ❤️ by Hoang Pham</string>
     <string name="live_nit_up">Live \nit up!</string>
+    <string name="some_thing_went_wrong_please_try_again_later">Some thing went wrong. Please try again later!</string>
 </resources>
