--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,9 +26,7 @@
     <string name="email_not_valid">Invalid email</string>
     <string name="password_not_empty">Password cannot be empty</string>
     <string name="password_not_valid">Invalid password</string>
-    <string name="error_invalid_credentials">Invalid credentials</string>
-    <string name="error_user_not_found">Account not found</string>
-    <string name="error_unknown">Unknown error</string>
+
 
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
@@ -60,6 +58,12 @@
     <string name="discover_swiggy">DISCOVER SWIGGY</string>
     <string name="crafted_with_by_hoang_pham">Crafted with ❤️ by Hoang Pham</string>
     <string name="live_nit_up">Live \nit up!</string>
+
+    <!--    exceptions-->
     <string name="some_thing_went_wrong_please_try_again_later">Some thing went wrong. Please try again later!</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="error_user_not_found">User not found.</string>
+    <string name="error_invalid_credentials">Invalid email or password.</string>
+    <string name="error_user_already_exists">A user with this email already exists.</string>
+    <string name="error_weak_password">The password is too weak.</string>
+    <string name="error_unknown">An unknown error occurred. Please try again.</string>
 </resources>
